# newton-vla-demo

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_PROFILE.md  README.md  README_PUBLIC_DRAFT.md  REHEARSAL.md  __main__.py  catcher.py  config.py  control.py  ik.py  launch.applescript  launch.command  pipeline.py  pyproject.toml  render.py  scene_legacy.py  scripted.py  voice.py
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
assets/: app_icon.icns  app_icon.py  make_icns.sh
demo_live/: .gitignore  Makefile  __init__.py  __main__.py  bootstrap.py  collab.py  config.py  control.py  effects.py  eval.py  experiment.py  physics.py  policy.py  pyproject.toml  render.py  sfx.py  tasks.py  telemetry.py  vla.py
demo_live/scene/: __init__.py  arm.py  world.py
demo_live/tests/: test_collab.py  test_control.py  test_display_mode.py  test_docs_site.py  test_effects.py  test_eval.py  test_experiment.py  test_ik.py  test_pipeline.py  test_policy.py  test_real_blocks.py  test_render_smoke.py  test_scripted_constants.py  test_tasks.py  test_vla_backends.py  test_vla_parser.py  test_voice_fuzzy.py
docs/: README.zh-CN.md  index.html  poster.tex  report.tex  showcase.html  slides.tex
docs/assets/: hero.js  lab.js  make_social_card.py
docs/superpowers/plans/: 2026-06-12-landing-page-blueprint-redesign.md
docs/superpowers/specs/: 2026-06-12-landing-page-blueprint-redesign-design.md
scene/: arm.py  chrome.py
tests/: test_catcher.py  test_render_smoke.py  test_scripted_flows.py  test_telemetry.py  test_vla_subprocess.py
