[project]
name = "newton-vla-demo"
version = "0.1.0"
description = "A 3-minute classroom demo of embodied AI on a MacBook: Newton + Claude VLA."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Hollis36 (kingcode)" },
]
requires-python = ">=3.10"

# Core runtime — minimal so the package is importable on any machine that
# already has `newton` (NVIDIA's physics engine) installed alongside.
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# The demo proper. pygame for rendering, sounddevice + speech_recognition
# for the optional voice input mode. Newton itself is NOT pinned here —
# install from https://github.com/newton-physics/newton in a sibling env.
demo = [
    "pygame-ce>=2.5.7",
    "sounddevice>=0.5.1",
    "SpeechRecognition>=3.14.3",
]

# Test runtime: same as demo plus unittest-discovery niceties.
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo_live"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SIM", "B"]
ignore = ["N806", "N812"]

[tool.ruff.lint.per-file-ignores]
"demo_live/tests/*" = ["E501"]
