[project]
name = "newton-vla-demo"
version = "0.1.0"
description = "A 3-minute classroom demo of embodied AI on a MacBook: Newton + Claude VLA."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Hollis36 (kingcode)" },
]
requires-python = ">=3.10"

# Core runtime — minimal so the package is importable on any machine that
# already has `newton` (NVIDIA's physics engine) installed alongside.
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# The demo proper. pygame for rendering, sounddevice + speech_recognition
# for the optional voice input mode. Newton itself is NOT pinned here —
# install from https://github.com/newton-physics/newton in a sibling env.
demo = [
    "pygame-ce>=2.5.7",
    "sounddevice>=0.5.1",
    "SpeechRecognition>=3.14.3",
]

# Optional: route VLA parsing through the Anthropic Python SDK (the "api"
# backend) instead of the `claude` CLI. Brings forced tool-use structured
# output + a cache-marked system prompt. Needs an ANTHROPIC_API_KEY at runtime.
api = [
    "anthropic>=0.40",
]

# Optional: the experimental learned intent-policy adapter
# (TransformersZeroShotPolicy). CPU-friendly; no GPU required.
learned = [
    "transformers>=4.40",
    "torch>=2.2",
]

# Test + quality tooling: linter, type checker, coverage.
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "coverage>=7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["demo_live"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "SIM", "B"]
ignore = ["N806", "N812"]

[tool.ruff.lint.per-file-ignores]
"demo_live/tests/*" = ["E501"]

# Type checking is scoped to the pure, dependency-light modules (the VLA
# backends, the learned-policy seam, and the eval harness). The renderer /
# physics / control modules import the pre-release Newton + pygame stacks,
# which don't ship type stubs, so they're out of scope here.
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
files = [
    "demo_live/vla.py",
    "demo_live/policy.py",
    "demo_live/eval.py",
]

# The Anthropic SDK and transformers are optional and dynamically imported;
# treat them as untyped so the demo's own modules type-check with or without
# them installed.
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*", "transformers", "transformers.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
